
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct r8192_priv {int txpower_tracking_wq; int priv_wq; int btxpower_tracking; } ;
struct net_device {int dummy; } ;


 struct r8192_priv* ieee80211_priv (struct net_device*) ;
 int queue_delayed_work (int ,int *,int ) ;

__attribute__((used)) static void dm_CheckTXPowerTracking_TSSI(struct net_device *dev)
{
 struct r8192_priv *priv = ieee80211_priv(dev);
 static u32 tx_power_track_counter;

 if (!priv->btxpower_tracking)
  return;
 if ((tx_power_track_counter % 30 == 0) && (tx_power_track_counter != 0))
  queue_delayed_work(priv->priv_wq, &priv->txpower_tracking_wq, 0);
 tx_power_track_counter++;
}
